_ Small bug on get_started and make arrow slightly visible in tutorial (in case user dont  mouseover the text)

--- a/newco/static/css/homepage.css
+++ b/newco/static/css/homepage.css
@@ -3,7 +3,7 @@
 
 .arrow-search-bar-hidden {
   z-index: -1;
-  opacity: 0;
+  opacity: 0.1;
   -webkit-transition: opacity 1s;
   -moz-transition: opacity 1s;
 }
